--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  dotted_border: ^3.1.0
   flutter_svg: ^2.2.3
   uuid: ^4.5.2
   intl: ^0.20.2
