--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  path: ^1.9.1
+  sqflite: ^2.4.2
+  path_provider: ^2.1.5
   flutter_svg: ^2.2.3
   uuid: ^4.5.2
   intl: ^0.20.2
